style(MultiPlayerUI): fix some UI issues on mobile screens

--- a/src/components/Header/HeaderButtons/HeaderButtons.module.scss
+++ b/src/components/Header/HeaderButtons/HeaderButtons.module.scss
@@ -73,9 +73,14 @@
   justify-content: flex-end;
 }
 
-@include m.small {
+@include m.medium {
   .headerButtons :where(.wrapper1, .wrapper2) {
     gap: 8px;
+  }
+}
+
+@include m.small {
+  .headerButtons :where(.wrapper1, .wrapper2) {
     width: 100%;
   }
 }
